[package]
name = "buf_stream"
version = "0.2.0"
authors = ["Alex DeLorenzo"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexdelorenzo/buf_stream"
homepage = "https://github.com/alexdelorenzo/buf_stream"
documentation = "https://alexdelorenzo.dev"
description = """
Buffered I/O for streams where each read/write half is separately buffered. Fork of bufstream.
"""

[dependencies.futures]
optional = true
version = "0.1.13"

[dependencies.tokio-io]
optional = true
version = "0.1.1"

[features]
default = []
tokio = ["futures", "tokio-io"]
